# BeGeniux

./: .gitignore  README.md  package-lock.json  package.json  tsup.config.ts
agent/: .env.example  README.md  langgraph.json  main.py  pyproject.toml
agent/src/begeniux_agent/: __init__.py  cli.py  prompts.py  runtime.py
examples/with-nextjs/: .env.example  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
examples/with-nextjs/app/: globals.css  layout.tsx  page.tsx  providers.tsx
examples/with-nextjs/app/api/begen/: route.ts
src/server/: index.ts  prompts.ts  providers.ts  schemas.ts
