[project]
name = "begeniux-langgraph"
version = "0.1.0"
description = "LangGraph agent for begeniux — reasons over behavior summaries + design systems and emits CSS-level UI adaptations via the apply_adaptations tool."
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "BeGeniux contributors" }]
keywords = [
    "begeniux",
    "adaptive-ui",
    "agentic-ui",
    "generative-ui",
    "langgraph",
    "langchain",
    "copilotkit",
    "ag-ui",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "copilotkit>=0.1.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.10.0",
    "langgraph-cli[inmem]>=0.2.0",
]

[project.optional-dependencies]
claude = ["langchain-anthropic>=0.3.0"]

[project.scripts]
begeniux-agent = "begeniux_agent.cli:main"

[project.urls]
Homepage = "https://github.com/WagnerAgent/BeGeniux"
Repository = "https://github.com/WagnerAgent/BeGeniux"
Issues = "https://github.com/WagnerAgent/BeGeniux/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/begeniux_agent"]
